[gd_scene load_steps=11 format=2]

[ext_resource path="res://LinhaChegada.tscn" type="PackedScene" id=1]
[ext_resource path="res://Jogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=5]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=6]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Jogador2.tscn" type="PackedScene" id=9]
[ext_resource path="res://trap.tscn" type="PackedScene" id=10]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Pista" type="Sprite" parent="."]
position = Vector2( -2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="LinhaChegada" parent="." instance=ExtResource( 1 )]

[node name="TimerCarrosRapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLento" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioTema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioPonto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioVitoria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="trap" parent="." instance=ExtResource( 10 )]
position = Vector2( 451, 610 )

[node name="trap" parent="trap" instance=ExtResource( 10 )]
position = Vector2( -7, -129 )

[node name="trap2" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 472, -178 )

[node name="trap3" parent="trap" instance=ExtResource( 10 )]
position = Vector2( -163, -182 )

[node name="trap4" parent="trap" instance=ExtResource( 10 )]
position = Vector2( -116, -293 )

[node name="trap5" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 169, -343 )

[node name="trap6" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 213, -188 )

[node name="trap7" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 329, -125 )

[node name="trap8" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 658, -456 )

[node name="trap9" parent="trap" instance=ExtResource( 10 )]
position = Vector2( -281, -449 )

[node name="trap10" parent="trap" instance=ExtResource( 10 )]
position = Vector2( -361, -340 )

[node name="trap11" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 187, -512 )

[node name="trap12" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 436, -452 )

[node name="trap13" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 698, -125 )

[node name="trap14" parent="trap" instance=ExtResource( 10 )]
position = Vector2( 586, -62 )

[node name="Jogador" parent="." instance=ExtResource( 2 )]
position = Vector2( 776, 691 )

[node name="Jogador2" parent="." instance=ExtResource( 9 )]
position = Vector2( 519, 690 )

[connection signal="timeout" from="TimerCarrosRapido" to="." method="_on_TimerCarrosRapido_timeout"]
[connection signal="timeout" from="TimerCarrosLento" to="." method="_on_TimerCarrosLento_timeout"]
[connection signal="reinicia" from="HUD" to="." method="_on_HUD_reinicia"]
[connection signal="pontua" from="Jogador" to="." method="_on_Jogador_pontua"]
[connection signal="pontua" from="Jogador2" to="." method="_on_Jogador2_pontua"]
